--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ body {
    um die meisten Elemente gut zu platzieren.
 */
 .text-and-img {
-    display: flex; /* Richtet die Elemnte in einer Zeile oder Reihe aus. */
-    flex-direction: row; /* In einer Reihe ausgerichtet. */
+    display: grid; /* Richtet die Elemnte in einer Zeile oder Reihe aus. */
+    grid-template-columns: 60% auto; /* In einer Reihe ausgerichtet. */
     gap: 1rem; /* Abstand zwischen den Elementen.*/
     align-items: center; /* Ausrichtung in der Mitte entlang der anderen Achse. */
     justify-content: center; /* Ausrichtung in der Mitte entlang der Hauptachse */
